--- a/portfolio/0000-02-02-bootstrap3.md
+++ b/portfolio/0000-02-02-bootstrap3.md
@@ -2,7 +2,7 @@
 title: Bootstrap 3 with a Custom Panel
 meta: Bootstrap 3 with my custom panel to tweak the style ever so slightly.
 type: portfolio
-image: /images/bootstrap-thumb.jpg"
+image: /images/bootstrap-thumb.jpg
 source: /#
 ---
 
